# tnews

./: .coverage  .dockerignore  .env.production.example  .gitignore  .plan  Dockerfile  Makefile  README.md  alembic.ini  borsenclient.py  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  coverage.xml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
logs/: api_log.log.2025-05-02  api_log.log.2025-05-03  api_log.log.2025-05-05  api_log.log.2025-05-06  api_log.log.2025-05-07  api_log.log.2025-05-08  api_log.log.2025-05-09  api_log.log.2025-05-12  api_log.log.2025-05-13  api_log.log.2025-05-14  api_log.log.2025-05-15  api_log.log.2025-05-16  api_log.log.2025-05-19  api_log.log.2025-05-20  api_log.log.2025-05-21
scripts/: docker-setup.sh  import_to_meilisearch.nu  log_analysis.nu
src/: constants.py  main.py
src/api/: __init__.py  degradation_middleware.py  dependencies.py  error_handlers.py  middleware.py  routes.py
src/api/routes/: auth.py  feeds.py  health.py
src/auth/: __init__.py  dependencies.py  models.py  rate_limit.py  security.py
src/clients/: __init__.py  connection.py  http.py  news.py  redis.py
src/core/: __init__.py  config.py  config.py.backup  container.py  degradation.py  exceptions.py  health_sync.py  logging.py  metrics.py
src/db/: database.py  operations.py
src/migrations/: env.py
src/migrations/versions/: 0d5d69bb9f0c_add_refresh_tokens.py  2126bcfe3d7f_initial_migration.py  4e72b928b64a_initial_migration.py  76dd46c400c5_add_performance_indexes.py  86cb437a7895_fix_duplicate_index_and_refresh_token_.py  98b24c16ffc9_add_bloomberg_latest.py  9d32f90748e4_initial_migration.py  a178f816a9b8_add_ft_and_techcrunch_sources.py  aba42b6741f5_unique_constraints.py  (+6 more)
src/models/: __init__.py  article.py  db_models.py  http.py  pagination.py
src/parsers/: __init__.py  base.py  json.py  xml.py
src/repositories/: article_repository.py
src/services/: __init__.py  article_service.py  cache_service.py
src/tasks/: __init__.py  celery_app.py  feed_tasks.py  scheduler.py
src/terminal_ui/: __init__.py  __main__.py  app.py  auth.py  modal01.tcss  modal02.tcss  modals.py  styles.css  subscription.py  widgets.py
src/utils/: __init__.py  benchmark_indexes.py  etag.py  formatters.py  pagination.py  request_id.py  text_utils.py  tracing.py
tests/: conftest.py  factories.py
tests/api/: test_error_handlers.py  test_feeds_api.py
tests/auth/: test_auth.py  test_rate_limit.py
tests/clients/: test_connection_client.py  test_news_client.py
tests/core/: test_exceptions.py  test_logging.py
tests/parsers/: test_parsers.py
tests/tasks/: test_celery_tasks.py  test_feed_chunk.py  test_result_collection.py
