[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "bcrypt>=4.3.0",
    "celery>=5.5.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "meilisearch>=0.34.1",
    "nltk>=3.9.1",
    "passlib>=1.7.4",
    "prometheus-client>=0.22.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "python-jose[cryptography]>=3.4.0",
    "redis>=6.1.0",
    "sqlmodel>=0.0.24",
    "tenacity>=9.1.2",
    "textual>=3.2.0",
    "uvicorn>=0.34.2",
]

[project.scripts]
tnews = "terminal_ui.__main__:main" 

[tool.setuptools]
package-dir = {"" = "src"} 

[tool.setuptools.packages.find]
where = ["src"] 
